Minor update for mobile device

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,9 @@
     <title>Simple Stopwatch by Afrizal Yogi</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Please enable JavaScript to run this app.</noscript>
     <div id="container">
       <div id="app"></div>
-      <div id="credit"></div>
     </div>
   </body>
 </html>
