--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Countdown Timer or Stopwatch web app that you can use it for Study Timer, Workout Timer and other things."/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <link rel="preload" href="https://cdn.jsdelivr.net/gh/afrizalyogi/stopwatch@main/src/fonts/Poppins-Regular.ttf" as="font" crossorigin="anonymous"/>
+    <link rel="preload" href="https://cdn.jsdelivr.net/gh/afrizalyogi/stopwatch@main/src/fonts/Poppins-Medium.ttf" as="font" crossorigin="anonymous"/>
     <title>Simple Stopwatch by Afrizal Yogi</title>
   </head>
   <body>
