Update assets source

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#111"/>
+    <meta name="title" content="Simple Stopwatch by Afrizal Yogi"/>
     <meta name="description" content="Countdown Timer or Stopwatch web app that you can use it for Study Timer, Workout Timer and other things."/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <link rel="preload" href="https://cdn.jsdelivr.net/gh/afrizalyogi/stopwatch@main/src/fonts/Poppins-Regular.ttf" as="font" crossorigin="anonymous"/>
-    <link rel="preload" href="https://cdn.jsdelivr.net/gh/afrizalyogi/stopwatch@main/src/fonts/Poppins-Medium.ttf" as="font" crossorigin="anonymous"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"/>
+    <link rel="preconnect" href="https://use.fontawesome.com" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <title>Simple Stopwatch by Afrizal Yogi</title>
   </head>
   <body>
